# gltfgen

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
assets/: asset_generator.rs  box_rotate_1.vtk  box_rotate_1.vtu  box_rotate_10.vtk  box_rotate_10.vtu  box_rotate_11.vtk  box_rotate_11.vtu  box_rotate_12.vtk  box_rotate_12.vtu  box_rotate_13.vtk  box_rotate_13.vtu  box_rotate_14.vtk  box_rotate_14.vtu  box_rotate_15.vtk  box_rotate_15.vtu  box_rotate_16.vtk  box_rotate_16.vtu  box_rotate_17.vtk  box_rotate_17.vtu  box_rotate_18.vtk  box_rotate_18.vtu  box_rotate_19.vtk  box_rotate_19.vtu  box_rotate_2.vtk  box_rotate_2.vtu  box_rotate_20.vtk  box_rotate_20.vtu  box_rotate_21.vtk  box_rotate_21.vtu  box_rotate_22.vtk  box_rotate_22.vtu  box_rotate_23.vtk  box_rotate_23.vtu  box_rotate_24.vtk  box_rotate_24.vtu  box_rotate_2Duv_expected.glb  box_rotate_3.vtk  box_rotate_3.vtu  box_rotate_4.vtk  box_rotate_4.vtu  (+23 more)
src/: attrib.rs  config.rs  error.rs  export.rs  lib.rs  main.rs  material.rs  mesh.rs  texture.rs  utils.rs
src/export/: animation.rs  builders.rs  primitives.rs
tests/: cmd.rs  meta.rs
tests/utils/: mod.rs
