[package]
name = "gltfgen"
version = "0.4.5"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
edition = "2018"

description = "Command line tool for generating glTF 2.0 animations from numbered sequences of mesh files."
documentation = "https://github.com/elrnv/gltfgen"
repository = "https://github.com/elrnv/gltfgen"
homepage = "https://github.com/elrnv/gltfgen"
readme = "README.md"
license = "MPL-2.0"
keywords = ["vtk", "obj", "3D", "animation", "generator"]

[dependencies]
gltf = { version = "0.15", features = ["extras"] }
structopt = "0.3"
regex = "1"
glob = "0.3"
#gut = { version = "0.5", features = ["io", "async-attribs"] }
gut = { path = "../gut", features = ["io", "async-attribs"] }
byteorder = "1"
pbr = "1"
rayon = "1"
syn = "1" # For parsing attributes
heck = "0.3" # For converting case
ron = "0.5"
serde = "1"
indexmap = { version = "1", features = ["serde-1"] }
terminal_size = "0.1"
num-traits = "0.2"
thiserror = "1.0.16"

[dev-dependencies]
assert_cmd = "0.12"
predicates = "1"
