[package]
name = "gltfgen"
version = "0.5.0"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
edition = "2018"

description = "Command line tool for generating glTF 2.0 animations from numbered sequences of mesh files."
documentation = "https://github.com/elrnv/gltfgen"
repository = "https://github.com/elrnv/gltfgen"
homepage = "https://github.com/elrnv/gltfgen"
readme = "README.md"
license = "MPL-2.0"
keywords = ["vtk", "obj", "3D", "animation", "generator"]

[dependencies]
gltf = { version = "1", features = ["names", "extras"] }
clap = { version = "3", features = ["derive", "wrap_help", "cargo"] }
regex = "1"
glob = "0.3"
meshx = "0.5"
byteorder = "1"
indicatif = { version = "0.16", features = ["rayon"] }
console = "0.15"
rayon = "1"
syn = "1" # For parsing attributes
heck = "0.4" # For converting case
ron = "0.7"
serde = "1"
indexmap = { version = "1", features = ["serde-1"] }
num-traits = "0.2"
thiserror = "1.0.23"
log = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
